2006-02-16  Roland Dreier  <rdreier@cisco.com>

	* src/memfree.c (mthca_alloc_db): Introduce a temporary variable
	to pass to posix_memalign() to avoid "warning: dereferencing
	type-punned pointer will break strict-aliasing rules."

	* Release version 1.0-rc7.

2006-02-15  Roland Dreier  <rdreier@cisco.com>

	* src/verbs.c (mthca_create_qp): Update to add new response and
	response size parameters for libibverbs ibv_cmd_create_qp().

2006-02-14  Roland Dreier  <rdreier@cisco.com>

	* Release version 1.0-rc6.

2006-02-13  Dotan Barak  <dotanb@mellanox.co.il>

	* src/verbs.c (mthca_query_qp, mthca_query_srq): Add query QP and
	query SRQ verbs.

2006-01-31  Roland Dreier  <rdreier@cisco.com>

	* src/mthca.h: Remove useless "extern" from function declarations.

2006-01-30  Michael S. Tsirkin  <mst@mellanox.co.il>

	* src/qp.c (mthca_tavor_post_recv, mthca_arbel_post_recv): Pass
	recv_cq to wq_overflow() so we lock the correct CQ.  Noticed by
	Yossi Leybovich.

2006-01-26  Roland Dreier  <rdreier@cisco.com>

	* src/mthca.h, src/verbs.c, src/cq.c, src/mthca.c: Add
	implementation of resize CQ operation.

	* src/mthca-abi.h: Add mthca-specific resize CQ ABI.

2006-01-22  Roland Dreier  <rdreier@cisco.com>

	* Release version 1.0-rc5.

2006-01-11  Jack Morgenstein  <jackm@mellanox.co.il>

	* src/verbs.c (mthca_free_pd): Free pointer to correct structure
	(we get lucky now, but don't rely on this).
	* src/mthca.c (mthca_free_context): Free context's PD so we don't
	leak it.

2006-01-06  Michael S. Tsirkin  <mst@mellanox.co.il>

	* src/verbs.c (mthca_destroy_qp): Jack Morgenstein has discovered
	the following race condition in libmthca:

	Thread A destroys QP A at the kernel side by calling
	ibv_cmd_destroy_qp, but its time-slice is over before removing it
	from the user-space qp_table removal.

	Thread B allocates QP B, receiving a QP number that matches the
	just-destroyed QP A in the low 16 bits.  Thread B will now
	over-write the slot in qp_table which was used for QP A.